// Copyright at HighForm Inc. 2013. All rights reserved.
//
// Protocol messages for datastore
// author: fei@highform.com

option java_package = "com.highform.datastore.proto"; // for java

message Schema {
  repeated TableSchema table_schema = 1;
}

message TableSchema {
  required string name = 1;
  required PrimaryKey primary_key = 2;
  repeated FieldSchema field_schema = 3;
}

message PrimaryKey {
  repeated int32 field_schema_index = 1;
}

message FieldSchema {
  required string name = 1;
  required DataType type = 2;
  
  // properties of the field
  optional bool is_indexed = 11 [default = false];
  optional bool is_stored = 12 [default = true];
  
  // class name of the binary
  optional string binary_class = 21;
}

message DataStore {
  repeated Table table = 1;
}

message Table {
  required string name = 1;
  repeated Field field = 2;
}

message Field {
  required string name = 1;
  required string value = 2;
}

enum DataType {
  ASCII = 1; // STRING
  TEXT = 2;
  VARCHAR = 3;
    
  INT = 4;
  VARINT = 5;
  LONG = 6; // BIGINT
  FLOAT = 7;
  DOUBLE = 8;
  
  BINARY = 9; // BLOB
  BOOLEAN = 10;
  COUNTER = 11;
  DECIMAL = 12;
  INET = 13;

  TIMESTAMP = 14;
  TIMEUUID = 15;
  UUID = 16;
}

